@@ -16,12 +16,12 @@ using System.Runtime.InteropServices;
 [assembly: CLSCompliantAttribute(true)]
 [assembly: ComVisibleAttribute(false)]
 [assembly: AssemblyTitleAttribute("Castle.Components.DictionaryAdapter.Tests for Microsoft .NET Framework 3.5")]
-[assembly: AssemblyDescriptionAttribute("The Unit Tests for Castle.Components.Binder")]
+[assembly: AssemblyDescriptionAttribute("")]
 [assembly: AssemblyCompanyAttribute("Castle Project")]
 [assembly: AssemblyProductAttribute("Castle.Components.DictionaryAdapter.Tests")]
 [assembly: AssemblyCopyrightAttribute("Castle Project, original author or authors")]
 [assembly: AssemblyVersionAttribute("1.1.0.0")]
-[assembly: AssemblyInformationalVersionAttribute("1.1.0.0")]
-[assembly: AssemblyFileVersionAttribute("1.1.0.0")]
+[assembly: AssemblyInformationalVersionAttribute("1.1.0.6280")]
+[assembly: AssemblyFileVersionAttribute("1.1.0.6280")]
 [assembly: AssemblyDelaySignAttribute(false)]
 
